# sqlalchemy-timescaledb

./: .gitignore  README.md  pyproject.toml
sqlalchemy_timescaledb/: dialect.py
tests/psycopg/: conftest.py
